--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,10 +1,10 @@
-<div id="<%= dom_id(message) %>_messages">
+<div id="<%= dom_id(message) %>_messages" class="flex flex-row justify-end">
   <% if message.user? %>
-    <div class="bg-sky-400 rounded-lg m-8 text-white p-4">
+    <div class="bg-sky-400 rounded-lg my-4 mx-8 text-white p-4 mr-auto">
       <%= message.content %>
     </div>
   <% elsif message.assistant? %>
-    <div class="bg-gray-200 rounded-lg m-8 p-4">
+    <div class="bg-gray-200 rounded-lg my-4 mx-8 p-4 w-3/4">
       <%= message.content %>
     </div>
   <% end %>
