--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,12 +27,11 @@
     <div class="container mx-auto mt-5 px-5">
       <div class="min-h-full">
         <nav class="border-b border-gray-200 bg-white">
-          <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8">
+          <div class="mx-auto max-w-7xl sm:px-6>
             <div class="flex h-16 justify-between">
               <div class="flex">
-                <div class="flex shrink-0 items-center">
-                  <img class="block h-8 w-auto lg:hidden" src="https://tailwindui.com/plus/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
-                  <img class="hidden h-8 w-auto lg:block" src="https://tailwindui.com/plus/img/logos/mark.svg?color=indigo&shade=600" alt="Your Company">
+                <div class="flex shrink-0 items-center align-middle">
+                  <%= image_tag "logo.png",  class: "hidden h-12 w-auto lg:block" %>
                 </div>
                 <div class="hidden sm:-my-px sm:ml-6 sm:flex sm:space-x-8">
                   <!-- Current: "border-indigo-500 text-gray-900", Default: "border-transparent text-gray-500 hover:border-gray-300 hover:text-gray-700" -->
