--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -10,7 +10,7 @@
       <div class="flex">
       </div>
       <div class="shrink-0">
-        <%= form.submit "Play", class: "inline-flex items-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"  %>
+        <%= link_to "Play", play_story_path(story), class: "inline-flex items-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600", data: { turbo_method: :post } %>
       </div>
     </div>
   </div>
