--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -14,10 +14,8 @@
   </div>
   <div class="flex flex-none items-center gap-x-4">
     <a href="<%= edit_story_path(story) %>" class="hidden rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:block">Edit Story<span class="sr-only">, <%= story.title %></span></a>
-    <%= form_with model: story, html: { class: "relative", id: dom_id(story, 'form') } do |form| %>
-      <%= form.hidden_field :id %>
-      <%= form.submit "Play", class: "hidden rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:block cursor-pointer"  %> 
-    <% end %>
+    <%= button_to "Play", play_story_path(story), class: "hidden rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:block cursor-pointer" %>
+    
     <div class="relative flex-none">
       <button type="button" class="-m-2.5 block p-2.5 text-gray-500 hover:text-gray-900" id="options-menu-0-button" aria-expanded="false" aria-haspopup="true">
         <span class="sr-only">Open options</span>
