--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -9,9 +9,11 @@
     <div class="flex items-center justify-between space-x-3 border-t border-gray-200 px-2 py-2 sm:px-3">
       <div class="flex">
       </div>
-      <div class="shrink-0">
-        <%= link_to "Play", play_story_path(story), class: "inline-flex items-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600", data: { turbo_method: :post } %>
-      </div>
+      <% unless story.new_record? %>
+        <div class="shrink-0">
+          <%= form.submit "Play", formaction: play_story_path(story), formmethod: :post, class: "inline-flex items-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600", data: { turbo_method: :post } %>
+        </div>
+      <% end %>
     </div>
   </div>
   </div>
