--- a/app/views/playthroughs/show.html.erb
+++ b/app/views/playthroughs/show.html.erb
@@ -1,7 +1,7 @@
 <div class="border-b border-gray-200 pb-5 sm:flex sm:items-center sm:justify-between">
   <h3 class="text-base font-semibold text-gray-900">Playing: <%= @playthrough.story.title %></h3>
   <div class="mt-3 flex sm:ml-4 sm:mt-0">
-    <a href="<%= edit_story_path(@playthrough.story) %>" type="submit" form="<%= dom_id(@playthrough.story, 'form') %>" class="ml-3 inline-flex items-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Edit</a>
+    <a href="<%= edit_story_path(@playthrough.story) %>" form="<%= dom_id(@playthrough.story, 'form') %>" class="ml-3 inline-flex items-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Edit</a>
   </div>
 </div>
 <div class="bg-white shadow sm:rounded-lg flex">
