--- a/app/views/stories/_story.html.erb
+++ b/app/views/stories/_story.html.erb
@@ -13,8 +13,12 @@
     </div>
   </div>
   <div class="flex flex-none items-center gap-x-4">
-    <a href="<%= edit_story_path(story) %>" class="hidden rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:block">Edit Story<span class="sr-only">, <%= story.title %></span></a>
-    <%= button_to "Play", play_story_path(story), class: "hidden rounded-md bg-white px-2.5 py-1.5 text-sm font-semibold text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 hover:bg-gray-50 sm:block cursor-pointer" %>
+    <%= render ButtonComponent.new(href: edit_story_path(story), as: :link) do %>
+      Edit Story<span class="sr-only">, <%= story.title %></span>
+    <% end %>
+    <%= render ButtonComponent.new(href: play_story_path(story)) do %>
+      Play
+    <% end %>
     <div class="relative flex-none group" data-controller="button-menu">
       <button type="button" class="-m-2.5 block p-2.5 text-gray-500 hover:text-gray-900" id="options-menu-0-button" aria-expanded="false" aria-haspopup="true" data-action="button-menu#toggle">
         <span class="sr-only">Open options</span>
