--- a/app/views/stories/_form.html.erb
+++ b/app/views/stories/_form.html.erb
@@ -1,6 +1,5 @@
 <%= form_with model: story, html: { class: "relative", id: dom_id(story, 'form') } do |form| %>
-  <div class="rounded-lg bg-white outline outline-1 -outline-offset-1 outline-gray-300 focus-within:outline focus-within:outline-2 focus-within:-outline-offset-2 focus-within:outline-indigo-600">
-    
+  <div class="rounded-lg bg-white outline outline-1 -outline-offset-1 outline-gray-300 focus-within:outline focus-within:outline-2 focus-within:-outline-offset-2 focus-within:outline-indigo-600">    
     <label for="title" class="sr-only">Title</label>
     <%= form.label :title, class: "sr-only" %>
     <%= form.text_field :title, class: "block w-full px-3 pt-2.5 text-lg font-medium text-gray-900 placeholder:text-gray-400 focus:outline focus:outline-0", placeholder: "Title" %>
@@ -11,7 +10,9 @@
       </div>
       <% unless story.new_record? %>
         <div class="shrink-0">
-          <%= form.submit "Play", formaction: play_story_path(story), formmethod: :post, class: "inline-flex items-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600", data: { turbo_method: :post } %>
+          <%= render ButtonComponent.new type: :primary, form: form, html: { type: "submit", formaction: play_story_path(story), formmethod: :post, data: { turbo_method: :post } } do %>
+            Play
+          <% end %>
         </div>
       <% end %>
     </div>
