--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,7 +1,9 @@
 <div class="border-b border-gray-200 pb-5 sm:flex sm:items-center sm:justify-between">
   <h3 class="text-base font-semibold text-gray-900">Editing: <%= @story.title %></h3>
   <div class="mt-3 flex sm:ml-4 sm:mt-0">
-    <button type="submit" form="<%= dom_id(@story, 'form') %>" class="ml-3 inline-flex items-center rounded-md bg-indigo-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Save</button>
+    <%= render ButtonComponent.new type: :secondary, html: { type: "submit", form: dom_id(@story, 'form'), class: "ml-3" } do %>
+      Save
+    <% end %>
   </div>
 </div>
  <%= render "form", story: @story %>
