--- a/app/views/stories/index.html.erb
+++ b/app/views/stories/index.html.erb
@@ -1,7 +1,9 @@
 <header>
   <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 flex">
     <h1 class="text-3xl font-bold tracking-tight text-gray-900">Stories</h1>
-    <a href="<%= new_story_path %>" class="ml-auto inline-flex items-center rounded-md bg-blue-600 px-3 py-2 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">New Story</a>
+    <%= render ButtonComponent.new href: new_story_path, type: :primary, as: :link, html: { class: "ml-auto" } do %>
+      New Story
+    <% end %>
   </div>
 </header>
 <main>
