--- a/app/views/playthroughs/show.html.erb
+++ b/app/views/playthroughs/show.html.erb
@@ -14,6 +14,7 @@
         </div>
       </ul>
     </div>
+    <%= turbo_stream_from "#{dom_id(@playthrough)}_message_form" %>
     <%= render partial: "messages/form", locals: { playthrough: @playthrough } %>
   </div>
   <div class="flex items-center">
