--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,7 +12,7 @@
         <div class="w-full sm:max-w-md">
           <%= form.text_field :content, class: "block w-full rounded-md bg-white px-3 py-1.5 text-base text-gray-900 outline outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-400 focus:outline focus:outline-2 focus:-outline-offset-2 focus:outline-indigo-600 sm:text-sm/6", autofocus: true, "x-on:keydown.cmd.enter" => "$event.target.form.requestSubmit();", placeholder: "What do you want to do?" %>
         </div>
-        <%= render ButtonComponent.new form: form, type: :secondary, html: { type: "submit", class: "mt-3 sm:ml-3 sm:mt-0 sm:w-auto" } do %>
+        <%= render ButtonComponent.new form: form, type: :secondary, html: { class: "mt-3 sm:ml-3 sm:mt-0 sm:w-auto" } do %>
           Send
         <% end %>
       </form>
