--- a/app/views/stories/edit.html.erb
+++ b/app/views/stories/edit.html.erb
@@ -1,9 +1,7 @@
 <div class="border-b border-gray-200 pb-5 sm:flex sm:items-center sm:justify-between">
   <h3 class="text-base font-semibold text-gray-900">Editing: <%= @story.title %></h3>
   <div class="mt-3 flex sm:ml-4 sm:mt-0">
-    <%= render ButtonComponent.new type: :secondary, html: { form: dom_id(@story, 'form'), class: "ml-3" } do %>
-      Save
-    <% end %>
+    <%= render ButtonComponent.new(type: :secondary, html: { form: dom_id(@story, 'form'), class: "ml-3" }).with_content("Save") %>
   </div>
 </div>
- <%= render "form", story: @story %>
+<%= render "form", story: @story %>
